Add docker deployment for Web